2004-12-01  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(generateContent): Content has to be of type String/String[].

2004-11-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(OrderedListContent.generateContent): Print null if there is not any
	object corresponding to the ordering element.

2004-11-14  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java: Add a way to add nulls at the
	end of ordered lists. This was needed f list with month names.

2004-11-14  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java:
	Generate output file only if it will contain some locale data.

2004-11-13  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(computeCalendar): Removed obsolete comment.

2004-11-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(TimeZoneContent.generateContent): Order zone names according to Java
	standard.

2004-11-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/ldml/Parser.java
	(Parser): Added support for 'era', 'eraAbbr' and 'eras' elements.

	* src/gnu/localegen/JavaGenerator.java
	(computeCalendars): Generate the data for eras.

2004-11-12  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(generateJavaHeader): Put proper classpath license header into output.
	(generateContents): Remove unneeded whitestace in output.

2004-11-12  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/Main.java
	(printUsage): Exit app cleanly.

2004-11-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/ldml/ListDataElement.java
	(flattenLeaf): Return null if the element is not found.

	* src/gnu/localegen/JavaGenerator.java
	(computeCalendar): Fix the access path for the calendar objects.

2004-08-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/javalocale, src/gnu/ldml: New LDML parser and GNU Classpath
	locale generator.

2004-08-11  C. Brian Jones <cbj@gnu.org>
